[package]
name = "black"
version = "0.1.0"
authors = ["sinclairzx81 <haydn.developer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
black-codegen  = { path = "../black-codegen" }
black-math    = { path = "../black-math" }
black-raster  = { path = "../black-raster" }
